fixed the sizing stretch bug

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ body {
     grid-row: 1/4;
 }
 
+#results-area{
+    position: absolute;
+}
+
 .grid-buttons{
     grid-area: buttons;
     grid-column: 2/8;
